Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: santa-deploy
 labels:
  app: santa
spec:
 replicas: 2
 selector:
  matchLabels:
   app: santa
 template:
  metadata:
   name: santa-pod
   labels:
    app: santa
  spec:
   containers:
    - name: santa
      image: devopsproject1.azurecr.io/santa-app:latest
      ports:
	   - containerPort: 80
	
---
apiVersion: v1
kind: Service
metadata:
 name: santa-service
spec:
 type: ClusterIP
 ports:
  - targetPort: 8080
 selector:
  app: santa
